# django-orm-optimization-talk

./: README.md  docker-compose.yml  pyproject.toml
app/: settings.py
shop/: factory.py  helpers.py  managers.py  models.py  samples.py
shop/management/commands/: create_test_records.py
shop/migrations/: 0001_initial.py  0002_customer_email.py  0003_customer_email_non_indexed_alter_customer_email.py
