[tool.poetry]
name = "django-orm-optimization-talk"
version = "0.1.0"
description = ""
authors = ["Thiago Ferreira <th.thiago96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
factory-boy = "^3.2.1"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
